# hydra-v0.5

./: .gitignore  CMakeLists.txt  CMakePresets.json  HANDOFF.md  README.md
cmake/: HydraWarnings.cmake
docs/: README.md  how-to-use.md  provider-embedding-plan.md
docs/adr/: 0001-qt-qml-shell.md  0002-tmux-session-backend.md  0003-terminal-surface-abstraction.md
docs/architecture/: project-definition.md  provider-adapter-contract.md  repo-storage-and-worktrees.md  system-architecture.md  ui-shell-component-map.md
docs/planning/: gemini-3.1-pro-preview-design-review-prompt-2026-03-06.md  hermes-steam-image-analysis-prompt-2026-03-06.md  hermes-steam-visual-synthesis-pass-2026-03-06.md  implementation-phases.md  implementation-start-prompt.md  maintainability-audit-pass-2026-03-06.md  micro-alignment-refinement-pass-2026-03-06.md  notification-polish-audit-pass-2026-03-06.md  phase-1-2-followup-refinement-2026-03-06.md  phase-1-2-refactor-roadmap-2026-03-06.md  phase-1.5-shell-checklist-2026-03-06.md  repository-tree-proposal.md  shell-v2-rewrite-plan-2026-03-06.md  steam-palette-correction-pass-2026-03-06.md  ux-assistance-refinement-pass-2026-03-06.md
docs/recommendations/: creative-design-review-2026-03-06.md  deep-visual-pass-2026-03-06.md  gemini-hydra-design-review-and-plan-2026-03-06.md  hermes-steam-visual-synthesis-2026-03-06.md
docs/research/: original-user-research-verbatim.md
docs/validation/: deep-visual-pass-report-2026-03-06.md  gemini-deep-visual-pass-review-2026-03-06.md  gemini-hermes-steam-pass-review-2026-03-06.md  gemini-inspiration-image-analysis-2026-03-06.md  gemini-maintainability-audit-review-2026-03-06.md  gemini-micro-alignment-review-2026-03-06.md  gemini-notification-polish-review-2026-03-06.md  gemini-phase1-2-delta-review-2026-03-06.md  gemini-refactor-followup-review-2026-03-06.md  gemini-steam-palette-correction-review-2026-03-06.md  gemini-ui-review-2026-03-06.md  gemini-ui-review-divider-refine-2026-03-06.md  gemini-ui-review-phase-1-2-refine-2026-03-06.md  gemini-ui-review-phase-a-2026-03-06.md  gemini-ui-review-phase-b-2026-03-06.md  gemini-ui-review-phase-c-2026-03-06.md  gemini-ui-review-phase-d-2026-03-06.md  gemini-ui-review-phase-e-2026-03-06.md  gemini-ux-assistance-review-2026-03-06.md  gui-automation-script-inventory.md  inspiration-palette-extraction-2026-03-06.md  maintainability-audit-report-2026-03-06.md  micro-alignment-refinement-report-2026-03-06.md  notification-polish-report-2026-03-06.md  phase-1-1.5-2-validation-report-2026-03-06.md  refactor-followup-report-2026-03-06.md  shell-v2-progress-2026-03-06.md  source-validated-implementation-plan-2026-03-06.md  steam-palette-correction-report-2026-03-06.md  steam-palette-extraction-2026-03-06.md  ui-observation-tooling-2026-03-06.md  ux-assistance-refinement-report-2026-03-06.md  visual-review-pipeline-2026-03-06.md  wayland-ui-operator-guide-2026-03-06.md
qml/Hydra/: App.qml  HelpCatalog.js
qml/Hydra/components/: ActionChip.qml  AggregatePulseRing.qml  AppShellSurface.qml  AppShortcutHub.qml  BootScreen.qml  CloseConfirmDialog.qml  ConsoleHeader.qml  DetailHelpPanel.qml  DividerHandle.qml  ExecutePanel.qml  FrameCorners.qml  FullscreenToggleButton.qml  HeartbeatTrace.qml  HelpSectionCard.qml  HoverHintBubble.qml  HydraButton.qml  HydraLogo.qml  InfoDotButton.qml  LaunchActionButton.qml  LaunchBusPanel.qml  LaunchDropdownField.qml  LaunchSidebar.qml  MasterConfigDialog.qml  MasterTerminalPane.qml  MasterTerminalSurface.qml  MetricTile.qml  NativeTerminalViewport.qml  NousSplashScreen.qml  PromptEditorSection.qml  ProviderRuntimeConfigSection.qml  QuickHelpBubble.qml  RailAtmosphere.qml  RailSidebarShell.qml  RepoCard.qml  ResumePanel.qml  RouterConfigDialog.qml  RouterPanel.qml  SectionHeader.qml  SessionBoard.qml  SessionCard.qml  (+14 more)
qml/Hydra/styles/: HydraSounds.qml  HydraTheme.qml  qmldir
scripts/: analyze_inspiration_images_with_gemini.py  capture_guidance_states_x11.py  capture_ui_screenshots.py  extract_steam_palette.py  hydra_router_control.py  review_ui_with_gemini.py  ui_fixture.py  validate_divider_drag_x11.py  validate_wayland_ui.py
src/: main.cpp
src/app/: desktop_dialog_bridge.cpp  desktop_dialog_bridge.hpp  desktop_launch_options.cpp  desktop_launch_options.hpp  desktop_sound_controller.cpp  desktop_sound_controller.hpp  hydra_application.cpp  hydra_application.hpp  qml_backend_foreign_types.cpp  qml_backend_foreign_types.hpp  qml_backend_registration.cpp  qml_backend_registration.hpp
src/domain/models/: launch_profile.hpp  launch_safety.cpp  launch_safety.hpp  provider_identity.cpp  provider_identity.hpp  repository.hpp  session_category.cpp  session_category.hpp  session_record.hpp  session_signal.cpp  session_signal.hpp  session_state.cpp  session_state.hpp  session_timeline_event.hpp  status_provenance.cpp  status_provenance.hpp  worktree.hpp
src/domain/ports/: mux_adapter.hpp  provider_adapter.hpp  provider_session_resolver.hpp  repo_store.hpp  repo_workspace.hpp  secrets_store.hpp  session_store.hpp  terminal_backend.hpp
src/domain/services/: provider_catalog.cpp  provider_catalog.hpp  repo_registry.cpp  repo_registry.hpp  session_audit_exporter.cpp  session_audit_exporter.hpp  session_supervisor.cpp  session_supervisor.hpp  session_supervisor_artifacts.cpp  session_supervisor_lifecycle.cpp  session_supervisor_observation.cpp  session_supervisor_resume.cpp  status_aggregator.cpp  status_aggregator.hpp  worktree_manager.cpp  worktree_manager.hpp
src/domain/support/: slug.cpp  slug.hpp
src/infrastructure/git/: git_repo_workspace.cpp  git_repo_workspace.hpp
src/infrastructure/mux/: tmux_adapter.cpp  tmux_adapter.hpp
src/infrastructure/persistence/: database_manager.cpp  database_manager.hpp  (+4 more)
src/tools/: boot_probe_main.cpp  core_smoke_main.cpp  provider_launch_overrides_smoke_main.cpp  session_order_smoke_main.cpp  shutdown_resume_smoke_main.cpp  terminal_clipboard_routing_smoke_main.cpp  terminal_interactive_attach_smoke_main.cpp
tests/: CMakeLists.txt
tools/: prepare_qmltermwidget.sh  validate_ui_wayland.py
(+60 files in other folders)
